--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-#Gluttonous-Snake
-
-<script src="http://localhost:8888/livereload.js"></script>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title></title>
-	<meta charset = " utf-8 "/>
+	<title>贪吃蛇</title>
+	<meta charset = "utf-8 "/>
 	<link rel = "stylesheet" type="text/css" href="./css/index.css"/>
 	<script type="text/javascript" src ="./js/index.js"></script>
 </head>
